--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,67 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Datos
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-card>
+    <ion-card-header>
+      Datos usuario
+    </ion-card-header>
+    <ion-card-content>
+      <img src="" alt="">
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+
+    </ion-card-header>
+    <ion-card-content>
+      <form [formGroup]='formGroup'>
+        <ion-list no-lines>
+          <ion-item>
+            <ion-label floating>Nombre</ion-label>
+            <ion-input type="text" formControlName='nombre'></ion-input>
+          </ion-item>
+          <div class="validation-errors">
+            <ng-container *ngFor="let validation of validation_messages.nombre">
+              <div class="error-message" *ngIf="formGroup.get('nombre').hasError(validation.type) && (formGroup.get('nombre').dirty || formGroup.get('nombre').touched)">
+                {{ validation.message }}
+              </div>
+            </ng-container>
+          </div>
+          <ion-item>
+            <ion-label floating>Email</ion-label>
+            <ion-input type="text" formControlName='email'></ion-input>
+          </ion-item>
+            <ng-container *ngFor="let validation of validation_messages.email">
+              <div class="error-message" *ngIf="formGroup.get('email').hasError(validation.type) && (formGroup.get('email').dirty || formGroup.get('email').touched)">
+                {{ validation.message }}
+              </div>
+            </ng-container>          
+          <ion-item>
+            <ion-label floating>Telefono</ion-label>
+            <ion-input type="text" formControlName='telefono' maxlength="10"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label floating>Comentario</ion-label>
+            <ion-input type="text" formControlName='comentario'></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label stacked>Acepto los términos y condiciones</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-checkbox enabled checked="false"></ion-checkbox>
+          </ion-item>
+          <ion-item>
+            <button ion-button full (click)="gotoWelcome()">Ingresar</button>
+          </ion-item>
+        </ion-list>
+      </form>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
